test/testdata_vm/002 add_imm_too_large2.err
Syntax error (test/testdata_vm/002 add_imm_too_large2.asm: 1): number argument to ADD is too large to fit in 5 bits: -17