test/testdata_vm/002 add_imm_too_large2.asm
ADD R0 R0 #-17
ADD R0 R0 #15
ADD R0 R0 #2
HALT